--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Js timers</title>
     <link rel="stylesheet" href="css/app.css" />
-    <script src="js/app.js"></script>
+    
   </head>
   <body>
     <form>
@@ -39,5 +39,6 @@
 
       <div class="container" style="background-color: #f1f1f1"></div>
     </form>
+    <script src="js/app.js"></script>
   </body>
 </html>
